fixed contacts overflow-x

--- a/FrontEnd/templates/messenger.styl
+++ b/FrontEnd/templates/messenger.styl
@@ -94,6 +94,7 @@ body, html
   width contacts-width
   >.wrap
     overflow-y scroll
+    overflow-x hidden
     &::-webkit-scrollbar-track
       &:vertical
         border-left 1px solid main-border-color
